--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.1",
     "uuid": "^11.0.3",
     "vite": "^5.4.11"
   },
