--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,17 @@
   "description": "",
   "dependencies": {
     "@tanstack/react-query": "^5.62.10",
-    "cloudinary": "^2.5.1",
+    "body-parser": "^1.20.3",
+    "cloudinary": "^1.21.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.16",
     "typescript": "^5.7.2"
   },
