--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+
+backend
 # Node artifact files
 node_modules/
 dist/
@@ -48,3 +50,11 @@ Thumbs.db
 *.mov
 *.wmv
 
+
+# Ignore compiled JavaScript files
+*.js
+*.jsx
+
+# Ignore output directories
+/dist
+/build
