--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,4 @@
+# filepath: frontend/.gitignore
 # Logs
 logs
 *.log
@@ -22,3 +23,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ensure Tailwind CSS config files are not ignored
+!tailwind.config.js
+!postcss.config.js
